<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="checkBox">Mega fonction !</string>
    <string name="poids">Poids :</string>
    <string name="taille">Taille :</string>
    <string name="poidsHint">Poids&#8230;</string>
    <string name="tailleHint">Taille&#8230;</string>
    <string name="metre">Mètre</string>
    <string name="centimetre">Centimètre</string>
    <string name="imc">Calculez l\'IMC</string>
    <string name="raz">RAZ</string>
    <string name="resultat">Résultat:</string>
    <string name="megaStrg">Vous faites un poids parfait ! Wahou ! Trop fort ! On dirait Brad Pitt (si vous êtes un homme)/Angelina Jolie (si vous êtes une femme)/Willy (si vous êtes un orque) !</string>
    <string name="défault">Vous devez cliquer sur le bouton "Calculer l\'IMC" pour obtenir un résultat.</string>

    <string name="None">None</string>
    <string name="Horizon">Horizon</string>
    <string name="alignParentRight">alignParentRight</string>
    <string name="Vertical">Vertical</string>
    <string name="Center_in_Parent">Center in Parent</string>
    <string name="Center_Right">Center+Right</string>
    <string name="alignParentBottom">alignParentBottom</string>
    <string name="alignBottom_Center">alignBottom+Center</string>
    <string name="alignRight_Bottom">alignRight+Bottom</string>



    <string name="itemsOpenUnderMenu">Les items précédés d\'un V ouvrent un sous menu</string>
    <string name="doNotOpenUnderMenu">N\'ouvre pas un sous-menu</string>
    <string name="no">Non !</string>
    <string name="V">V</string>
    <string name="openUnderMenu">Ouvre un sous-menu</string>
    <string name="hereOkey">Là si !</string>
    <string name="objectExtendsTwoColm">Cet item s\'étend sur deux colonnes, cool hein ?</string>
</resources>
