<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1">
    <TextView
        android:text="@string/itemsOpenUnderMenu"
        />
    <View
        android:layout_height="2dip"
        android:background="#FF909090"
        />
    <TableRow>
        <TextView
            android:text="@string/doNotOpenUnderMenu"
            android:layout_column="1"
            android:padding="3dip"
            />
        <TextView
            android:text="@string/no"
            android:gravity="end"
            android:padding="3dip"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/V"
            />
        <TextView
            android:text="@string/openUnderMenu"
            android:layout_column="1"
            android:padding="3dip"
            />
        <TextView
            android:text="@string/hereOkey"
            android:gravity="end"
            android:padding="3dip"
            />
    </TableRow>
    <View
        android:layout_height="2dip"
        android:background="#FF909090"
        />
    <TableRow>
        <TextView
            android:text="@string/V"
            />
        <TextView
            android:text="@string/openUnderMenu"
            android:padding="3dip"
            />
    </TableRow>
    <View
        android:layout_height="2dip"
        android:background="#FF909090"
        />
    <TableRow>
        <TextView
            android:layout_column="1"
            android:layout_span="2"
            android:text="@string/objectExtendsTwoColm"
            android:padding="3dip"
            />
    </TableRow>
</TableLayout>
